--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.8.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -52,6 +53,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@prisma/client": "^5.4.1",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
