Sort articles and extend package.json

--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "compile": "graphql-codegen",
     "watch": "graphql-codegen -w",
     "codegen": "graphql-codegen --config codegen.ts",
+    "codegen:watch": "graphql-codegen --config codegen.ts --watch",
     "prisma": "prisma"
   },
   "dependencies": {
