--- a/api/package.json
+++ b/api/package.json
@@ -53,6 +53,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@parcel/watcher": "^2.3.0",
     "@prisma/client": "^5.4.1",
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
